Bug 105420 - [SNA] After Xrandr rotate, linux looks like execute a logout
Summary: [SNA] After Xrandr rotate, linux looks like execute a logout
Status: CLOSED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: DRM/Intel (show other bugs)
Version: unspecified
Hardware: Other All
: high critical
Assignee: Intel GFX Bugs mailing list
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard: ReadyForDev
Keywords:
Depends on:
Blocks:
 
Reported: 2018-03-09 14:51 UTC by Armando Antonio
Modified: 2018-04-13 17:38 UTC (History)
1 user (show)

See Also:
i915 platform: CNL
i915 features: display/DP, display/eDP, display/HDMI, display/Other, display/PSR


Attachments
kernel log (5.32 MB, text/plain)
2018-03-09 14:51 UTC, Armando Antonio
no flags Details
dmesg (421.34 KB, text/plain)
2018-03-09 14:55 UTC, Armando Antonio
no flags Details
xorg.log (61.83 KB, text/plain)
2018-04-11 16:53 UTC, Elizabeth
no flags Details

Description Armando Antonio 2018-03-09 14:51:47 UTC
Created attachment 137937 [details]
kernel log

Executing xrandr --rotate looks like Linux perform a logout, this issue is present with eDP only, or eDP, HDMI and DP connected at the same time.

Platform Configuration:

======================================
             Software
======================================
kernel version              : 4.16.0-rc4-drm-tip-ww10-commit-73d5ac4+
hostname                    : gfx-desktop
architecture                : x86_64
os version                  : Ubuntu 17.10
os codename                 : artful
kernel driver               : i915
bios revision               : 124.2
bios release date           : 02/05/2018
ksc                         : 1.36
hardware acceleration       : disabled
swap partition              : enabled on (/dev/nvme0n1p2)

======================================
        Graphic drivers
======================================
mesa                        : 17.2.8
grep: /opt/X11R7/var/log/Xorg.0.log: No such file or directory
libdrm                      : 2.4.91
cairo                       : 1.14.10

======================================
             Hardware
======================================
motherboard model          : CannonLakeClientPlatform
motherboard id             : CannonLakeYLPDDR4RVP
form factor                : Laptop
manufacturer               : IntelCorporation
cpu family                 : Other
cpu family id              : 6
cpu information            : Genuine Intel(R) CPU 0000 @ 1.10GHz
gpu card                   : Intel Corporation Device 5a41 (rev 04) (prog-if 00 [VGA controller])
memory ram                 : 7.63 GB
max memory ram             : 8 GB
display resolution         : 1600x900
cpu thread                 : 4
cpu core                   : 2
cpu model                  : 102
cpu stepping               : 3
socket                     : Other
current cd clock frequency : 336000 kHz
maximum cd clock frequency : 528000 kHz
displays connected         : eDP-1 HDMI-A-1 DP-2

======================================
             Firmware
======================================
dmc fw loaded             : yes
dmc version               : 1.7
guc fw loaded             : fetch NONE, load NONE
guc version wanted        : wanted 0.0, found 0.0
guc version found         : wanted 0.0, found 0.0

======================================
             kernel parameters
======================================
quiet splash i915.alpha_support=1 drm.debug=0x1e i915.enable_psr=1
Comment 1 Armando Antonio 2018-03-09 14:55:04 UTC
Created attachment 137938 [details]
dmesg
Comment 2 Elizabeth 2018-03-14 15:21:50 UTC
Rising priority since is feature failure w/o workaround.
Comment 3 Jani Saarinen 2018-03-29 07:10:18 UTC
First of all. Sorry about spam.
This is mass update for our bugs. 

Sorry if you feel this annoying but with this trying to understand if bug still valid or not.
If bug investigation still in progress, please ignore this and I apologize!

If you think this is not anymore valid, please comment to the bug that can be closed.
If you haven't tested with our latest pre-upstream tree(drm-tip), can you do that also to see if issue is valid there still and if you cannot see issue there, please comment to the bug.
Comment 4 Elizabeth 2018-04-11 16:53:33 UTC
Created attachment 138764 [details]
xorg.log

This only occurs with SNA.

gfx@gfx-desktop:~$ cat .local/share/xorg/Xorg.0.log | grep -i sna
[   144.156] (II) intel(0): SNA compiled from 2.99.917-815-g6c1e70ca
[   144.156] (II) intel(0): SNA compiled with assertions enabled
[   144.156] (II) intel(0): SNA compiled for use with valgrind
[   144.176] (**) intel(0): Option "AccelMethod" "sna"
[   144.180] (II) intel(0): SNA initialized with disabled backend

When executing 

   $ xrandr --output eDP1 --rotate left

It will logout and return to the login screen. I'll attach the Xorg.0.log, not sure if is helpful. Thanks.

======================================
             Software
======================================
kernel version              : 4.16.0-mainline-4.16
hostname                    : gfx-desktop
architecture                : x86_64
os version                  : Ubuntu 17.10
os codename                 : artful
kernel driver               : i915
bios revision               : 124.2
bios release date           : 02/05/2018
ksc                         : 1.36
hardware acceleration       : disabled
swap partition              : enabled on (/dev/nvme0n1p2)

======================================
        Graphic drivers
======================================
mesa                        : 18.0.0 (git-dceb1ce807
libdrm                      : 2.4.91
cairo                       : 1.14.10

======================================
             Hardware
======================================
motherboard model          : CannonLakeClientPlatform
motherboard id             : CannonLakeYLPDDR4RVP
form factor                : Laptop
manufacturer               : IntelCorporation
cpu family                 : Other
cpu family id              : 6
cpu information            : Genuine Intel(R) CPU 0000 @ 1.10GHz
gpu card                   : Intel Corporation Device 5a41 (rev 04) (prog-if 00 [VGA controller])
memory ram                 : 7.63 GB
max memory ram             : 8 GB
display resolution         : 1600x900
cpu thread                 : 4
cpu core                   : 2
cpu model                  : 102
cpu stepping               : 3
socket                     : Other
current cd clock frequency : 336000 kHz
maximum cd clock frequency : 528000 kHz
displays connected         : HDMI-A-1

======================================
             Firmware
======================================
dmc fw loaded             : yes
dmc version               : 1.6
guc fw loaded             : fetch NONE, load NONE
guc version wanted        : wanted 0.0, found 0.0
guc version found         : wanted 0.0, found 0.0

======================================
             kernel parameters
======================================
splash drm.debug=0x1e i915.alpha_support=1 resume=/dev/sda2
Comment 5 Elizabeth 2018-04-11 16:57:54 UTC
Little error, in displays connected, should be eDP1. Is the only display connected at the moment.
Comment 6 Chris Wilson 2018-04-11 17:16:04 UTC
There's no rotation in that log.
Comment 7 Elizabeth 2018-04-11 20:10:54 UTC
(In reply to Chris Wilson from comment #6)
> There's no rotation in that log.
Just copied the log as it was, how can I make sure it includes rotate process??
Comment 8 Chris Wilson 2018-04-11 20:29:17 UTC
Is X even running? If it restarted, copy the old log. And check stderr.
Comment 9 Elizabeth 2018-04-12 20:29:12 UTC
(In reply to Chris Wilson from comment #8)
> Is X even running? If it restarted, copy the old log. And check stderr.

Ok, this time I tried tailing the log, and there is a trace:

Last login: Thu Apr 12 05:55:50 2018 from 10.218.160.86
gfx@gfx-desktop:~$ tail -f .local/share/xorg/Xorg.0.log
[  1033.593] AllocNewConnection: client index = 19, socket fd = 48
[  1033.750] client(2400000): Released pid(2422).
[  1033.750] client(2400000): Released cmdline(nautilus-desktop) and cmdargs(NULL).
[  1033.797] client(2400000): Reserved pid(2422).
[  1033.797] client(2400000): Reserved cmdname(nautilus-desktop) and cmdargs(NULL).
[  1033.797] AllocNewConnection: client index = 18, socket fd = 48
[  1035.154] client(2600000): Released pid(2422).
[  1035.154] client(2600000): Released cmdline(nautilus-desktop) and cmdargs(NULL).
[  1042.740] client(2200000): Released pid(2451).
[  1042.740] client(2200000): Released cmdline(/usr/bin/nautilus) and cmdargs(--gapplication-service).
[  1058.380] input-thread: InputThreadDoWork waiting for devices
[  1058.656] input-thread: InputThreadDoWork waiting for devices
[  1058.675] input-thread: InputThreadDoWork waiting for devices
[  1058.928] input-thread: InputThreadDoWork waiting for devices
[  1058.968] input-thread: InputThreadDoWork waiting for devices
[  1059.008] input-thread: InputThreadDoWork waiting for devices
[  1059.036] input-thread: InputThreadDoWork waiting for devices
[  1059.113] client(2200000): Reserved pid(2657).
[  1059.113] client(2200000): Reserved cmdname(/usr/bin/gnome-terminal.real) and cmdargs(NULL).
[  1059.113] AllocNewConnection: client index = 17, socket fd = 47
[  1059.117] client(2600000): Reserved pid(2657).
[  1059.117] client(2600000): Reserved cmdname(/usr/bin/gnome-terminal.real) and cmdargs(NULL).
[  1059.117] AllocNewConnection: client index = 19, socket fd = 48
[  1059.117] client(2600000): Released pid(2657).
[  1059.117] client(2600000): Released cmdline(/usr/bin/gnome-terminal.real) and cmdargs(NULL).
[  1059.139] input-thread: InputThreadDoWork waiting for devices
[  1059.149] client(2600000): Reserved pid(2660).
[  1059.149] client(2600000): Reserved cmdname(/usr/lib/gnome-terminal/gnome-terminal-server) and cmdargs(NULL).
[  1059.149] AllocNewConnection: client index = 19, socket fd = 48
[  1059.153] client(2800000): Reserved pid(2660).
[  1059.153] client(2800000): Reserved cmdname(/usr/lib/gnome-terminal/gnome-terminal-server) and cmdargs(NULL).
[  1059.153] AllocNewConnection: client index = 20, socket fd = 49
[  1059.153] client(2800000): Released pid(2660).
[  1059.153] client(2800000): Released cmdline(/usr/lib/gnome-terminal/gnome-terminal-server) and cmdargs(NULL).
[  1059.257] client(2200000): Released pid(2657).
[  1059.257] client(2200000): Released cmdline(/usr/bin/gnome-terminal.real) and cmdargs(NULL).
[  1059.315] input-thread: InputThreadDoWork waiting for devices
[  1059.355] input-thread: InputThreadDoWork waiting for devices
[  1062.372] input-thread: InputThreadDoWork waiting for devices
[  1062.476] input-thread: InputThreadDoWork waiting for devices
[  1063.556] input-thread: InputThreadDoWork waiting for devices
[  1063.676] input-thread: InputThreadDoWork waiting for devices
[  1066.204] input-thread: InputThreadDoWork waiting for devices
[  1066.210] client(2200000): Reserved pid(2684).
[  1066.210] client(2200000): Reserved cmdname(xrandr) and cmdargs(--output eDP1 --rotate left).
[  1066.210] AllocNewConnection: client index = 17, socket fd = 47
[  1066.308] input-thread: InputThreadDoWork waiting for devices
[  1066.476] (II) intel(0): resizing framebuffer to 1440x2560
[  1066.477] (II) intel(0): switch to mode 2560x1440@60.0 on eDP1 using pipe 0, position (0, 0), rotation left, reflection none
[  1067.593] client(2200000): Released pid(2684).
[  1067.593] client(2200000): Released cmdline(xrandr) and cmdargs(--output eDP1 --rotate left).
[  1067.600] (EE)
[  1067.600] (EE) Backtrace:
[  1067.601] (EE) 0: /usr/lib/xorg/modules/drivers/intel_drv.so (sna_crtc_redisplay+0x375) [0x7fc30ab0d4a5]
[  1067.601] (EE) 1: /usr/lib/xorg/modules/drivers/intel_drv.so (sna_mode_redisplay+0x91d) [0x7fc30ab17f3d]
[  1067.601] (EE) 2: /usr/lib/xorg/modules/drivers/intel_drv.so (sna_scanout_flush+0x50) [0x7fc30aadab90]
[  1067.602] (EE) 3: /usr/lib/xorg/modules/drivers/intel_drv.so (sna_accel_block+0x19d) [0x7fc30aaee2dd]
[  1067.602] (EE) 4: /usr/lib/xorg/modules/drivers/intel_drv.so (sna_block_handler+0x6d) [0x7fc30ab19c0d]
[  1067.602] (EE) 5: /usr/bin/Xorg (BlockHandler+0x3a) [0x5561634ac5da]
[  1067.602] (EE) 6: /usr/bin/Xorg (WaitForSomething+0xdd) [0x5561635f603d]
[  1067.603] (EE) 7: /usr/bin/Xorg (Dispatch+0xb3) [0x5561634a79d3]
[  1067.603] (EE) 8: /usr/bin/Xorg (dix_main+0x388) [0x5561634abc48]
[  1067.603] (EE) 9: /lib/x86_64-linux-gnu/libc.so.6 (__libc_start_main+0xf1) [0x7fc30e9a71c1]
[  1067.604] (EE) 10: /usr/bin/Xorg (_start+0x2a) [0x5561634958da]
[  1067.604] (EE) 11: ? (?+0x0) [0x0]
[  1067.604] (EE)
[  1067.604] (EE)
Fatal server error:
[  1067.604] (EE) sna_crtc_redisplay:8841 assertion '!wedged(sna)' failed
[  1067.604] (EE)
[  1067.604] (EE)
Please consult the The X.Org Foundation support
         at http://wiki.x.org
 for help.
[  1067.604] (EE) Please also check the log file at "/home/gfx/.local/share/xorg/Xorg.0.log" for additional information.
[  1067.604] (EE)
[  1067.604] (II) AIGLX: Suspending AIGLX clients for VT switch
[  1067.607] ACPI: Closing device
[  1067.637] (EE) Server terminated with error (1). Closing log file.
Comment 10 Chris Wilson 2018-04-13 09:45:04 UTC
Just a bogus assert, without it the code would have fallen through to the falback path. One day someone will submit some CNL enabling.

commit 16820c4bfcfcdfad7c787bc4d04e03f08ee8f80a (HEAD, upstream/master)
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Fri Apr 13 10:40:45 2018 +0100

    sna: Handle wedged devices during sna_crtc_redisplay
    
    If the device is already wedged (no GPU), jump straight to the swrast
    path for performing the per-crtc transformations.
    
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=105420
    Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>
Comment 11 Elizabeth 2018-04-13 17:38:04 UTC
(In reply to Chris Wilson from comment #10)
> Just a bogus assert, without it the code would have fallen through to the
> falback path. One day someone will submit some CNL enabling.
> 
> commit 16820c4bfcfcdfad7c787bc4d04e03f08ee8f80a (HEAD, upstream/master)
> Author: Chris Wilson <chris@chris-wilson.co.uk>
> Date:   Fri Apr 13 10:40:45 2018 +0100
> 
>     sna: Handle wedged devices during sna_crtc_redisplay
>     
>     If the device is already wedged (no GPU), jump straight to the swrast
>     path for performing the per-crtc transformations.
>     
>     Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=105420
>     Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>

Verified. It works properly.

[   266.969] client(2600000): Reserved pid(1747).
[   266.969] client(2600000): Reserved cmdname(/usr/bin/gnome-terminal.real) and cmdargs(NULL).
[   266.969] AllocNewConnection: client index = 19, socket fd = 49
[   266.972] client(2800000): Reserved pid(1747).
[   266.972] client(2800000): Reserved cmdname(/usr/bin/gnome-terminal.real) and cmdargs(NULL).
[   266.972] AllocNewConnection: client index = 20, socket fd = 50
[   266.972] client(2800000): Released pid(1747).
[   266.973] client(2800000): Released cmdline(/usr/bin/gnome-terminal.real) and cmdargs(NULL).
[   267.006] client(2800000): Reserved pid(1750).
[   267.006] client(2800000): Reserved cmdname(/usr/lib/gnome-terminal/gnome-terminal-server) and cmdargs(NULL).
[   267.006] AllocNewConnection: client index = 20, socket fd = 50
[   267.009] client(2a00000): Reserved pid(1750).
[   267.009] client(2a00000): Reserved cmdname(/usr/lib/gnome-terminal/gnome-terminal-server) and cmdargs(NULL).
[   267.009] AllocNewConnection: client index = 21, socket fd = 51
[   267.010] client(2a00000): Released pid(1750).
[   267.010] client(2a00000): Released cmdline(/usr/lib/gnome-terminal/gnome-terminal-server) and cmdargs(NULL).
[   267.011] input-thread: InputThreadDoWork waiting for devices
[   267.116] client(2600000): Released pid(1747).
[   267.116] client(2600000): Released cmdline(/usr/bin/gnome-terminal.real) and cmdargs(NULL).
[   267.155] input-thread: InputThreadDoWork waiting for devices
[   267.187] input-thread: InputThreadDoWork waiting for devices
[   273.756] input-thread: InputThreadDoWork waiting for devices
[   273.843] input-thread: InputThreadDoWork waiting for devices
[   274.452] input-thread: InputThreadDoWork waiting for devices
[   274.531] input-thread: InputThreadDoWork waiting for devices
[   275.276] input-thread: InputThreadDoWork waiting for devices
[   275.332] input-thread: InputThreadDoWork waiting for devices
[   275.772] input-thread: InputThreadDoWork waiting for devices
[   275.875] input-thread: InputThreadDoWork waiting for devices
[   276.484] input-thread: InputThreadDoWork waiting for devices
[   276.596] input-thread: InputThreadDoWork waiting for devices
[   283.075] input-thread: InputThreadDoWork waiting for devices
[   283.328] input-thread: InputThreadDoWork waiting for devices
[   283.368] input-thread: InputThreadDoWork waiting for devices
[   283.408] input-thread: InputThreadDoWork waiting for devices
[   283.444] input-thread: InputThreadDoWork waiting for devices
[   289.180] input-thread: InputThreadDoWork waiting for devices
[   289.186] client(2600000): Reserved pid(1771).
[   289.186] client(2600000): Reserved cmdname(xrandr) and cmdargs(--output eDP1 --rotate normal).
[   289.186] AllocNewConnection: client index = 19, socket fd = 49
[   289.188] client(2600000): Released pid(1771).
[   289.188] client(2600000): Released cmdline(xrandr) and cmdargs(--output eDP1 --rotate normal).
[   289.299] input-thread: InputThreadDoWork waiting for devices
[   299.059] input-thread: InputThreadDoWork waiting for devices
[   299.219] input-thread: InputThreadDoWork waiting for devices
[   300.619] input-thread: InputThreadDoWork waiting for devices
[   300.748] input-thread: InputThreadDoWork waiting for devices
[   301.220] input-thread: InputThreadDoWork waiting for devices
[   301.307] input-thread: InputThreadDoWork waiting for devices
[   301.388] input-thread: InputThreadDoWork waiting for devices
[   301.492] input-thread: InputThreadDoWork waiting for devices
[   301.555] input-thread: InputThreadDoWork waiting for devices
[   301.644] input-thread: InputThreadDoWork waiting for devices
[   301.716] input-thread: InputThreadDoWork waiting for devices
[   301.803] input-thread: InputThreadDoWork waiting for devices
[   301.875] input-thread: InputThreadDoWork waiting for devices
[   301.988] input-thread: InputThreadDoWork waiting for devices
[   302.483] input-thread: InputThreadDoWork waiting for devices
[   302.587] input-thread: InputThreadDoWork waiting for devices
[   302.852] input-thread: InputThreadDoWork waiting for devices
[   302.980] input-thread: InputThreadDoWork waiting for devices
[   302.988] input-thread: InputThreadDoWork waiting for devices
[   303.107] input-thread: InputThreadDoWork waiting for devices
[   303.211] input-thread: InputThreadDoWork waiting for devices
[   303.308] input-thread: InputThreadDoWork waiting for devices
[   303.396] input-thread: InputThreadDoWork waiting for devices
[   303.524] input-thread: InputThreadDoWork waiting for devices
[   304.988] input-thread: InputThreadDoWork waiting for devices
[   304.994] client(2600000): Reserved pid(1772).
[   304.994] client(2600000): Reserved cmdname(xrandr) and cmdargs(--output eDP1 --rotate left).
[   304.994] AllocNewConnection: client index = 19, socket fd = 49
[   305.083] input-thread: InputThreadDoWork waiting for devices
[   305.263] (II) intel(0): resizing framebuffer to 1440x2560
[   305.264] (II) intel(0): switch to mode 2560x1440@60.0 on eDP1 using pipe 0, position (0, 0), rotation left, reflection none
[   306.379] client(2600000): Released pid(1772).
[   306.379] client(2600000): Released cmdline(xrandr) and cmdargs(--output eDP1 --rotate left).
[   306.405] client(2600000): Reserved pid(1255).
[   306.405] client(2600000): Reserved cmdname(nautilus-desktop) and cmdargs(NULL).
[   306.405] AllocNewConnection: client index = 19, socket fd = 49
[   306.607] client(2a00000): Reserved pid(1171).
[   306.607] client(2a00000): Reserved cmdname(/usr/lib/gnome-settings-daemon/gsd-xsettings) and cmdargs(NULL).
[   306.607] AllocNewConnection: client index = 21, socket fd = 49
[   306.615] client(2a00000): Released pid(1171).
[   306.615] client(2a00000): Released cmdline(/usr/lib/gnome-settings-daemon/gsd-xsettings) and cmdargs(NULL).
[   306.628] client(2a00000): Reserved pid(1171).
[   306.628] client(2a00000): Reserved cmdname(/usr/lib/gnome-settings-daemon/gsd-xsettings) and cmdargs(NULL).
[   306.629] AllocNewConnection: client index = 21, socket fd = 49
[   306.629] client(2a00000): Released pid(1171).
[   306.629] client(2a00000): Released cmdline(/usr/lib/gnome-settings-daemon/gsd-xsettings) and cmdargs(NULL).
[   306.635] client(2a00000): Reserved pid(1171).
[   306.635] client(2a00000): Reserved cmdname(/usr/lib/gnome-settings-daemon/gsd-xsettings) and cmdargs(NULL).
[   306.635] AllocNewConnection: client index = 21, socket fd = 49
[   306.636] client(2a00000): Released pid(1171).
[   306.636] client(2a00000): Released cmdline(/usr/lib/gnome-settings-daemon/gsd-xsettings) and cmdargs(NULL).
[   306.875] client(2400000): Released pid(1255).
[   306.875] client(2400000): Released cmdline(nautilus-desktop) and cmdargs(NULL).
[   324.788] input-thread: InputThreadDoWork waiting for devices
[   324.915] input-thread: InputThreadDoWork waiting for devices
[   325.756] input-thread: InputThreadDoWork waiting for devices
[   325.852] input-thread: InputThreadDoWork waiting for devices
[   327.083] input-thread: InputThreadDoWork waiting for devices
[   327.087] client(2400000): Reserved pid(1779).
[   327.087] client(2400000): Reserved cmdname(xrandr) and cmdargs(--output eDP1 --rotate normal).
[   327.087] AllocNewConnection: client index = 18, socket fd = 49
[   327.155] input-thread: InputThreadDoWork waiting for devices
[   327.362] (II) intel(0): resizing framebuffer to 2560x1440
[   327.364] (II) intel(0): switch to mode 2560x1440@60.0 on eDP1 using pipe 0, position (0, 0), rotation normal, reflection none
[   328.426] client(2400000): Released pid(1779).
[   328.426] client(2400000): Released cmdline(xrandr) and cmdargs(--output eDP1 --rotate normal).
[   328.435] client(2400000): Reserved pid(1255).
[   328.435] client(2400000): Reserved cmdname(nautilus-desktop) and cmdargs(NULL).
[   328.435] AllocNewConnection: client index = 18, socket fd = 49
[   328.631] client(2a00000): Reserved pid(1171).
[   328.632] client(2a00000): Reserved cmdname(/usr/lib/gnome-settings-daemon/gsd-xsettings) and cmdargs(NULL).
[   328.632] AllocNewConnection: client index = 21, socket fd = 49
[   328.632] client(2a00000): Released pid(1171).
[   328.632] client(2a00000): Released cmdline(/usr/lib/gnome-settings-daemon/gsd-xsettings) and cmdargs(NULL).
[   328.637] client(2a00000): Reserved pid(1171).
[   328.637] client(2a00000): Reserved cmdname(/usr/lib/gnome-settings-daemon/gsd-xsettings) and cmdargs(NULL).
[   328.637] AllocNewConnection: client index = 21, socket fd = 49
[   328.649] client(2a00000): Released pid(1171).
[   328.649] client(2a00000): Released cmdline(/usr/lib/gnome-settings-daemon/gsd-xsettings) and cmdargs(NULL).
[   328.659] client(2a00000): Reserved pid(1171).
[   328.659] client(2a00000): Reserved cmdname(/usr/lib/gnome-settings-daemon/gsd-xsettings) and cmdargs(NULL).
[   328.660] AllocNewConnection: client index = 21, socket fd = 49
[   328.679] client(2a00000): Released pid(1171).
[   328.679] client(2a00000): Released cmdline(/usr/lib/gnome-settings-daemon/gsd-xsettings) and cmdargs(NULL).
[   329.024] client(2600000): Released pid(1255).
[   329.024] client(2600000): Released cmdline(nautilus-desktop) and cmdargs(NULL).


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.