sna: Handle wedged devices during sna_crtc_redisplay

If the device is already wedged (no GPU), jump straight to the swrast
path for performing the per-crtc transformations.

Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=105420
Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>